--- a/style.css
+++ b/style.css
@@ -79,13 +79,16 @@ header {
   justify-content: center;
   align-items: center;
 }
+.container{
+  margin-left: 10%;
+  margin-right: 10%;
+  display: flex;
+  justify-content: center;
+}
 main{
-    display: flex;
-    flex-direction: column;
     
-    align-items: center;
-    margin-left: 250px;
-    margin-right: 250px;
+    width: 900px;
+    
 }
 
 .first-title-main img {
@@ -98,15 +101,19 @@ main{
   margin-top: 80px;
   display: flex;  
   color: var(--third-color);
-  font-size: 1.1em;
+  font-size: 1.05em;
     line-height: 30px;
     margin-bottom: 100px;
     
     font-weight: 390;
+    
    
 }
 .welcome p{
   width: 50%;
+}
+.welcome p:first-child{
+  padding-right: 15px;
 }
 .welcome p a {
   color: blue;
@@ -130,17 +137,62 @@ i {
 .cards div{
   display: flex;
   flex-direction: column;  
-  width: 350px;
-  height: 400px;
-  border-radius: 10px;
-  background-color: var(--premary-color);
-  padding: 20px; 
+  width: 32%;
+  height: 350px;
+  border-radius: 10px; 
+  padding: 20px;
+  margin-bottom: 50px; 
+  color: white;
+  opacity: 1;
+  transition-duration: 300ms;
+}
+.cards div:hover{
+  cursor: pointer;
+  opacity: 0.8;
 }
 .cards div i{
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-right: 0;
 }
 .cards div h2{
   padding-bottom:15px ;
 
+}
+.cards div h3{
+  font-size: 1.5em;
+  font-weight: 350;
+  padding-bottom: 50px;
+}
+.cards div p{
+ align-self: center;
+  font-size: 1em;
+  font-weight: 450;
+}
+.card1{
+   background-color: var(--premary-color);
+}
+.card2{
+  background-color: rgb(80, 143, 226);
+}
+.card3{
+  background-color: black;
+}
+section .wep h2{
+   font-weight: 300;
+   font-size: 1.5em;
+   line-height: 35px;
+   color: var(--premary-color);
+}
+section .wep{
+  width: 30%;
+
+}
+.icons-section{
+  display: flex;
+  justify-content: flex-start;
+  gap: 100px;
+}
+.icons-section{
+  margin-bottom: 100px;
 }
