--- a/style.css
+++ b/style.css
@@ -8,8 +8,18 @@
   padding: 0;
   font-family: "Work";
 }
+
+.roboto-uniquifier {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
 :root {
   --premary-color: rgb(0, 195, 165);
+  --premary-color-two: rgb(218, 247, 246);
   --second-color: rgb(197, 197, 197);
   --third-color: rgb(81, 81, 81);
   --premary-font-size: 35px;
@@ -52,67 +62,67 @@ nav {
   justify-content: space-around;
   background-color: white;
   height: 100px;
+  opacity: 0.97;
 }
-.nav-l {
+.nav-l ul {
   display: flex;
   gap: 10px;
 }
-nav ul li:first-child {
+
+.nav-l ul li a {
+  color: var(--second-color);
+}
+.nav-l ul li .first-li {
   color: var(--premary-color);
 }
 header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 
-
-.first-title-main h1 {    
- font-weight: 400;
- margin-bottom: 5px;
+.first-title-main h1 {
+  font-weight: 400;
+  margin-bottom: 5px;
 }
 
-.first-title-main {  
+.first-title-main {
   flex-direction: column;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.container{
+.container1 {
   margin-left: 10%;
   margin-right: 10%;
   display: flex;
   justify-content: center;
 }
-main{
-    
-    width: 900px;
-    
+main {
+  width: 900px;
 }
 
 .first-title-main img {
-    margin-bottom: 50px;
-    margin-top: 100px;
-    width: 40px;
-  
+  margin-bottom: 50px;
+  margin-top: 100px;
+  width: 40px;
 }
 .welcome {
   margin-top: 80px;
-  display: flex;  
+  display: flex;
   color: var(--third-color);
   font-size: 1.05em;
-    line-height: 30px;
-    margin-bottom: 100px;
-    
-    font-weight: 390;
-    
-   
+  line-height: 30px;
+  margin-bottom: 100px;
+
+  font-weight: 390;
 }
-.welcome p{
+.welcome p {
   width: 50%;
 }
-.welcome p:first-child{
+.welcome p:first-child {
   padding-right: 15px;
 }
 .welcome p a {
@@ -129,70 +139,142 @@ i {
 .cards {
   width: 100%;
   display: flex;
-   justify-content: space-between;
+  justify-content: space-between;
   gap: 10px;
-    color: rgb(0, 0, 0);
- 
+  color: rgb(0, 0, 0);
 }
-.cards div{
+.cards div {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   width: 32%;
   height: 350px;
-  border-radius: 10px; 
+  border-radius: 10px;
   padding: 20px;
-  margin-bottom: 50px; 
+  margin-bottom: 50px;
   color: white;
   opacity: 1;
   transition-duration: 300ms;
 }
-.cards div:hover{
+.cards div:hover {
   cursor: pointer;
   opacity: 0.8;
 }
-.cards div i{
+.cards div i {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-right: 0;
 }
-.cards div h2{
-  padding-bottom:15px ;
-
+.cards div h2 {
+  padding-bottom: 15px;
 }
-.cards div h3{
+.cards div h3 {
   font-size: 1.5em;
   font-weight: 350;
   padding-bottom: 50px;
 }
-.cards div p{
- align-self: center;
+.cards div p {
+  align-self: center;
   font-size: 1em;
   font-weight: 450;
 }
-.card1{
-   background-color: var(--premary-color);
+.card1 {
+  background-color: var(--premary-color);
 }
-.card2{
+.card2 {
   background-color: rgb(80, 143, 226);
 }
-.card3{
+.card3 {
   background-color: black;
 }
-section .wep h2{
-   font-weight: 300;
-   font-size: 1.5em;
-   line-height: 35px;
-   color: var(--premary-color);
+section .wep h2 {
+  font-weight: 300;
+  font-size: 1.5em;
+  line-height: 35px;
+  color: var(--premary-color);
 }
-section .wep{
+section .wep {
   width: 30%;
-
 }
-.icons-section{
+.icons-section {
   display: flex;
   justify-content: flex-start;
   gap: 100px;
 }
-.icons-section{
+.icons-section {
   margin-bottom: 100px;
+}
+
+.icons-title-one {
+  width: 85%;
+}
+.icons-doc {
+  display: inline-block;
+  flex-direction: row;
+  line-height: 45px;
+  color: var(--second-color);
+}
+.ico-doc {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  gap: 15px;
+  color: var(--second-color);
+  transition-duration: 0.5s;
+}
+.ico-doc:hover {
+  cursor: pointer;
+  color: var(--premary-color);
+}
+.logoimg {
+  width: 100px;
+  height: 35px;
+  filter: grayscale(1);
+  transition-duration: 0.5s;
+}
+.logoimg:hover {
+  filter: grayscale(0);
+}
+.container2 {
+  padding-top: 50px;
+  width: 100vw;
+  height: 550px;
+  background-color: var(--premary-color-two);
+  margin-bottom: 1000px;
+  display: flex;
+  justify-content: space-around;
+  overflow: hidden;
+  /* background-attachment:scroll; */
+}
+.container2 main {
+  /* padding: 10px 0 100px 0;   */
+
+  width: auto;
+}
+
+.first-div {
+  padding-left: 0;
+  line-height: 30px;
+}
+.first-div h1 {
+  font-weight: 350;
+  line-height: 40px;
+  padding-bottom: 30px;
+}
+.container2 main {
+  position: relative;
+  display: flex;
+  width: 800px;
+}
+.container2 main .first-div::before {
+  background: url(asset/logo.png) no-repeat;
+  background-size: 90%;
+  content: "";
+  height: 435px;
+  pointer-events: none;
+  position: absolute;
+  left: -10%;
+  top: 45%;
+  width: 456px;
 }
